--- a/src/waf/testwaf.html
+++ b/src/waf/testwaf.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>"
 "<meta http-equiv=\"Content-Type\" content=\"text/html;charset=gb2312\">"
-"<meta name=\"keywords\" content=\"hihttps, WAF, SSL WAF,Web Application Firewall\" bdsfid=\"4\">"
+"<meta name=\"keywords\" content=\"aihttps, WAF, SSL WAF,Web Application Firewall\" bdsfid=\"4\">"
 "<meta name=\"description\" content=\"Reliable, High Performance TCP/HTTP Load Balancer\" bdsfid=\"5\">"
 "<html>"
 "<head>"
-"<title>hihttps - High Performance HTTPS Web Application Firewall </title>"
+"<title>aihttps - High Performance HTTPS Web Application Firewall </title>"
 "<style>"
 "    body {"
 "        width: 35em;"
@@ -14,10 +14,10 @@
 "</style>"
 "</head>"
 "<body>"
-"<h1>Welcome to hihttps!</h1>"
-"<p>hihttps is a high performane Web Application Firewall based on HTTPS, support for the owasp-modsecurity-core-rule.</p>"
+"<h1>Welcome to aihttps!</h1>"
+"<p>aihttps is a high performane Web Application Firewall based on HTTPS, support for the owasp-modsecurity-core-rule.</p>"
 "<p>To dowload the source code  and support please refer to "
-"<a href=\"https://github.com/qq4108863/hihttps\">github.com</a>.<br/>"
-"<p><em>Thank you for using hihttps.</em></p>"
+"<a href=\"https://github.com/qq4108863/\">github.com</a>.<br/>"
+"<p><em>Thank you for using aihttps.</em></p>"
 "</body>"
 "</html>"
